--- a/app/views/exams/new.html.erb
+++ b/app/views/exams/new.html.erb
@@ -1,3 +1,7 @@
+<%= content_for :script do %>
+  <%= javascript_include_tag "jquery.countdown.min" %>
+<%end%>
+
 <div class="main-content">
   <a href="javascript:void(0)" class="btn btn-primary">题目列表</a>
   <div class="main-title">
@@ -5,6 +9,7 @@
   </div>
   <div class="question-content">
     <%= simple_form_for Exam.new do |f|%>
+      <%= f.hidden_field :sub_course_id, value: params[:sub_course_id]%>
       <% @questions.each_with_index do |question, index|%>
         <p class="title"><%= index + 1 %> <%= question.title%></p>
           <% question.options.each do |option|%>
@@ -14,32 +19,57 @@
             </p>
           <% end %>
         <% end %>
-        <%= f.submit '提交', class: "btn btn-primary"%>
+        <div class="col-sm-6 col-md-offset-3">
+          <%= f.submit '提交', class: "btn btn-primary"%>
+        </div>
       <% end %>
     <%= link_to "成绩查询", " ", class: "btn btn-warning"%>
   </div>
   <div class="tieshi">
+    <div id="countdown"></div>
+    <ul class="question-num">
+      <li>
+        <p class="title">总有单选题</p>
+        <p class="number">
+          <span>20</span>
+          题
+        </p>
+      </li>
+      <li>
+        <p class="title">已答题数</p>
+        <p class="number">
+          <span>15</span>
+          题
+        </p>
+      </li>
+      <li>
+        <p class="title">未答题数</p>
+        <p class="number">
+          <span>5</span>
+          题
+        </p>
+      </li>
+    </ul>
+    <a href="javascript:void(0)" id="back-to-top"></a>
   </div>
 </div>
-<!--思路： 创建exam对象， question为题目， option为选择项-->
-<!--
-<%= form_for Exam.new do |f|%>
-  <%- @questions.each_with_index do |question, index|%>
-    <p class="title"><%= index + 1%> <%= question.title%></p>
-    <% question.options.each do |option|%>
-      <%- if option.be_right %>
-        <p class="option">
-          <%= radio_button(:exam, "score"+"_"+index.to_s, Des.encode(question.signal_score.to_s))%>
-          <span><%= option.name%></span>
-        </p>
-      <%- else%>
-        <p class="option">
-          <%= radio_button(:exam, "score"+"_"+index.to_s, Des.encode(['a','b','c'].shuffle.first))%>
-          <span><%= option.name%></span>
-        </p>
-      <%end%>
-    <%end%>
-  <%end%>
-  <%= f.submit '提交', class: "btn btn-primary"%>
-<%end%>
--->
+
+<script type="text/javascript">
+  $('#countdown').countdown('2015/05/21', function(event) {
+    $(this).html(event.strftime('%H:%M:%S'));
+  });
+  $(function () {
+    $(window).scroll(function(){
+      if ($(window).scrollTop()>100){
+        $back.fadeIn(500);
+      }
+      else {
+        $back.fadeOut(500);
+      }
+    });
+    $("#back-to-top").click(function(){
+      $('body,html').animate({scrollTop:0},1000);
+      return false;
+    });
+  });
+</script>
