--- a/app/views/user/_nav_left.html.erb
+++ b/app/views/user/_nav_left.html.erb
@@ -18,17 +18,17 @@
       <% end %>
     </li>
      <li>
-      <%= link_to "#" do %>
+      <%= link_to my_collect_user_index_path do %>
       	<span class="glyphicon glyphicon-star" aria-hidden="true"></span> 我的收藏
       <% end %>
     </li>
      <li>
-      <%= link_to "#" do %>
+      <%= link_to questions_answers_user_index_path do %>
       	<span class="glyphicon glyphicon-tag" aria-hidden="true"></span> 我的问答
       <% end %>
     </li>
      <li>
-      <%= link_to "#" do %>
+      <%= link_to discuss_center_user_index_path do %>
       	<span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> 讨论中心
       <% end %>
     </li>
