--- a/app/views/user/score_search.html.erb
+++ b/app/views/user/score_search.html.erb
@@ -27,7 +27,7 @@
               <div class="panel-body">
                 <div class="col-sm-7 ov-hidden"><%= image_tag "score-search1.png" %></div>
                 <div class="col-sm-5">
-                  <h4>前段自动化工具</h4>
+                  <h4>前端自动化工具</h4>
                   <div class="score-detail">
                     <span class="text-primary">&bull;</span>
                     时间：2015-08-28
@@ -51,7 +51,7 @@
               <div class="panel-body">
                 <div class="col-sm-7 ov-hidden"><%= image_tag "score-search2.png" %></div>
                 <div class="col-sm-5">
-                  <h4>前段自动化工具</h4>
+                  <h4>前端自动化工具</h4>
                   <div class="score-detail">
                     <span class="text-primary">&bull;</span>
                     时间：2015-08-28
@@ -77,7 +77,7 @@
               <div class="panel-body">
                 <div class="col-sm-7 ov-hidden"><%= image_tag "score-search1.png" %></div>
                 <div class="col-sm-5">
-                  <h4>前段自动化工具</h4>
+                  <h4>前端自动化工具</h4>
                   <div class="score-detail">
                     <span class="text-primary">&bull;</span>
                     时间：2015-08-28
@@ -101,7 +101,7 @@
               <div class="panel-body">
                 <div class="col-sm-7 ov-hidden"><%= image_tag "score-search2.png" %></div>
                 <div class="col-sm-5">
-                  <h4>前段自动化工具</h4>
+                  <h4>前端自动化工具</h4>
                   <div class="score-detail">
                     <span class="text-primary">&bull;</span>
                     时间：2015-08-28
@@ -127,7 +127,7 @@
               <div class="panel-body">
                 <div class="col-sm-7 ov-hidden"><%= image_tag "score-search1.png" %></div>
                 <div class="col-sm-5">
-                  <h4>前段自动化工具</h4>
+                  <h4>前端自动化工具</h4>
                   <div class="score-detail">
                     <span class="text-primary">&bull;</span>
                     时间：2015-08-28
@@ -151,7 +151,7 @@
               <div class="panel-body">
                 <div class="col-sm-7 ov-hidden"><%= image_tag "score-search2.png" %></div>
                 <div class="col-sm-5">
-                  <h4>前段自动化工具</h4>
+                  <h4>前端自动化工具</h4>
                   <div class="score-detail">
                     <span class="text-primary">&bull;</span>
                     时间：2015-08-28
@@ -177,7 +177,7 @@
               <div class="panel-body">
                 <div class="col-sm-7 ov-hidden"><%= image_tag "score-search1.png" %></div>
                 <div class="col-sm-5">
-                  <h4>前段自动化工具</h4>
+                  <h4>前端自动化工具</h4>
                   <div class="score-detail">
                     <span class="text-primary">&bull;</span>
                     时间：2015-08-28
@@ -201,7 +201,7 @@
               <div class="panel-body">
                 <div class="col-sm-7 ov-hidden"><%= image_tag "score-search2.png" %></div>
                 <div class="col-sm-5">
-                  <h4>前段自动化工具</h4>
+                  <h4>前端自动化工具</h4>
                   <div class="score-detail">
                     <span class="text-primary">&bull;</span>
                     时间：2015-08-28
@@ -227,7 +227,7 @@
               <div class="panel-body">
                 <div class="col-sm-7 ov-hidden"><%= image_tag "score-search1.png" %></div>
                 <div class="col-sm-5">
-                  <h4>前段自动化工具</h4>
+                  <h4>前端自动化工具</h4>
                   <div class="score-detail">
                     <span class="text-primary">&bull;</span>
                     时间：2015-08-28
@@ -251,7 +251,7 @@
               <div class="panel-body">
                 <div class="col-sm-7 ov-hidden"><%= image_tag "score-search2.png" %></div>
                 <div class="col-sm-5">
-                  <h4>前段自动化工具</h4>
+                  <h4>前端自动化工具</h4>
                   <div class="score-detail">
                     <span class="text-primary">&bull;</span>
                     时间：2015-08-28
