--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -10,12 +10,12 @@
 	</div>
 
 	<div class="row self-main-context">
-	  <ul class="nav nav-pills">
+	  <ul class="nav nav-pills show-content">
 		<li role="presentation" class="active"><a href="#">个人资料</a></li>
 		<li role="presentation"><a href="#">修改密码</a></li>
 	  </ul>
 
-	  <div class="container div-form">
+	  <div class="container div-form div-content">
 		<%= simple_form_for(@user, url: user_path(current_user.id), wrapper: "horizontal_form", html: { method: :put, multipart: true, class: "form-horizontal" }) do |f| %>
 		  <%= f.input :nickname %>
 		  <%= f.input :image , as: :file, wrapper: "horizontal_file_input"%>
@@ -43,6 +43,7 @@
 </div>
 
 <%= content_for :script do %>
+  <%= javascript_include_tag "_user" %>
   <%= javascript_tag do %>
     get_specialties_path = "<%= get_specialties_user_index_path %>"
     get_grades_path = "<%= get_grades_user_index_path %>"
