--- a/app/views/teachers/my_courses.html.erb
+++ b/app/views/teachers/my_courses.html.erb
@@ -1,3 +1,61 @@
 <div class="main-content">
   <%= render "left_bar"%>
+  <div id="teacher-info">
+  	<div class="teacher-img">
+  		<%= image_tag("my-teacher.png")%>
+  	</div>
+  	<div class="teacher-data">
+  	  <div class="title-content">
+        <p class="title">基本信息</p>
+        <p class="line"></p>
+  	  </div>
+  	  <ul>
+  	  	<li class="width-50">
+  	  		姓名:	钱红
+  	  	</li>
+  	  	<li class="width-50">
+  	  		出生年月:	 1982-09
+  	  	</li>
+  	  	<li class="width-50">
+  	  		专业技术职位:	讲师
+  	  	</li>
+  	  	<li class="width-50">
+  	  		所属院系:	 计算机信息系
+  	  	</li>
+  	  	<li class="width-50">
+  	  		手机号码:	 13636338706
+  	  	</li>
+  	  	<li class="width-50">
+  	  		电子邮箱:	 qianhong@aliyun.com
+  	  	</li>
+  	  	<li class="width-50">
+  	  		资格证书:	 高级教师资格， 信息安全讲师
+  	  	</li>
+  	  	<li class="width-50">
+  	  		传真号码:	 暂无
+  	  	</li>
+  	  	<li class="width-50">
+  	  		最终学历:	 本科
+  	  	</li>
+  	  	<li class="width-50">
+  	  		最高学位:	 硕士
+  	  	</li>
+  	  	<li class="width-100">
+  	  		教学与技术专长:	 C语言程序基础，ASP.NET开发， java编程基础， 数据库技术
+  	  	</li>
+  	  </ul>
+  	  <div class="title-content">
+        <p class="title">工作简历</p>
+        <p class="line"></p>
+  	  </div>
+  	  <ul>
+  	  	<li class="width-100">
+  	  		2013年2月-至今: 	上海新侨职业技术学院 计算机信息系专任教师
+  	  	</li>
+  	  	<li class="width-100">
+  	  		2005年2月-2013年1月: 	上海新侨职业技术学院 计算机信息系专任教师
+  	  	</li>
+  	  </ul>
+  	</div>
+  </div>
 </div>
