--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -66,7 +66,7 @@
   <div class="info-teachers-content wrapper">
     <% @teachers.each do |teacher|%>
       <div class="teacher-content">
-        <%= link_to image_tag("teacher.png"), my_courses_teachers_path(teacher.number)%>
+        <%= link_to image_tag("teacher.png"), my_courses_teachers_path%>
         <p>国家优秀教师称号</p>
       </div>
     <%end%>
