--- a/app/views/teachers/_left_bar.html.erb
+++ b/app/views/teachers/_left_bar.html.erb
@@ -5,12 +5,12 @@
     </div>
     <ul class="list">
       <li class="active">
-        <%= link_to "", class: 'active' do %>
+        <%= link_to my_courses_teachers_path, class: 'active' do %>
           <span class="glyphicon glyphicon-film">我的课程</span>
         <%end%>
       </li>
       <li>
-        <%= link_to "", class: 'active' do %>
+        <%= link_to my_grades_teachers_path, class: 'active' do %>
           <span class="glyphicon glyphicon-tasks">我的班级</span>
         <%end%>
       </li>
