--- a/app/views/teachers/_left_bar.html.erb
+++ b/app/views/teachers/_left_bar.html.erb
@@ -35,7 +35,7 @@
         <%end%>
       </li>
       <li>
-        <%= link_to "", class: 'active' do %>
+        <%= link_to my_info_teachers_path, class: 'active' do %>
           <span class="glyphicon glyphicon-user">教师介绍</span>
         <%end%>
       </li>
