--- a/app/views/teachers/my_grades.html.erb
+++ b/app/views/teachers/my_grades.html.erb
@@ -1,7 +1,7 @@
 <div class="main-content">
 	<%= render "left_bar" %>
   <%= render "teacher_info" %>
-  <div class="teacher-grades-content teacher-wrapper">
+  <div class="teacher-content teacher-wrapper">
   	<div class="nav-bar">
   		<span class="btn btn-primary by-btn-bg">我的班级</span>
   	</div>
