--- a/app/views/teachers/my_courses.html.erb
+++ b/app/views/teachers/my_courses.html.erb
@@ -1,7 +1,7 @@
 <div class="main-content">
   <%= render "left_bar" %>
   <%= render "teacher_info" %>
-  <div class="teacher-courses-content teacher-wrapper">
+  <div class="teacher-content teacher-wrapper">
   	<div class="nav-bar">
   		<span class="btn btn-primary by-btn-bg">课程中心</span>
   	</div>
