--- a/app/views/user/discuss_center.html.erb
+++ b/app/views/user/discuss_center.html.erb
@@ -55,7 +55,7 @@
       <!-- ######################最新话题##################### -->
 
       <!-- ######################热门话题##################### -->
-      <div class="div-content discuss-center-content">
+      <div class="div-content discuss-center-content" style="display: none;">
       <% (1..8).each do |i| %>
         <div class="row discuss-center-list">
           <div class="col-sm-1 no-padding">
@@ -90,7 +90,7 @@
       <!-- ######################热门话题##################### -->
 
        <!-- ######################等待回复##################### -->
-      <div class="div-content discuss-center-content">
+      <div class="div-content discuss-center-content" style="display: none;">
       <% (1..8).each do |i| %>
         <div class="row discuss-center-list">
           <div class="col-sm-1 no-padding">
