--- a/app/views/user/score_search.html.erb
+++ b/app/views/user/score_search.html.erb
@@ -21,257 +21,93 @@
 
       <div class="div-content scoure-search">
 
-        <div class="row score-list">
-          <div class="col-sm-6">
-            <div class="panel panel-default">
-              <div class="panel-body">
-                <div class="col-sm-7 ov-hidden"><%= image_tag "score-search1.png" %></div>
-                <div class="col-sm-5">
-                  <h4>前端自动化工具</h4>
-                  <div class="score-detail">
-                    <span class="text-primary">&bull;</span>
-                    时间：2015-08-28
+        <% if @exams.blank? %>
+          <div class="blank">没有可供查询的成绩</div>
+        <% else %>
+          <% @exams.each_with_index do |exam,index| %>
+            <% if index/2 == 0 %>
+              <div class="row score-list">
+            <% end %>
+            <div class="col-sm-6">
+              <div class="panel panel-default">
+                <div class="panel-body">
+                  <div class="col-sm-7 ov-hidden"><%= image_tag "score-search1.png" %></div>
+                  <div class="col-sm-5">
+                    <h4><%= exam.try(:sub_course).try(:name) %></h4>
+                    <div class="score-detail">
+                      <span class="text-primary">&bull;</span>
+                      时间：<%= exam.created_at.try(:strftime,'%Y-%m-%d').try(:to_s) %>
+                    </div>
+                    <div class="score-detail">
+                      <span class="text-primary">&bull;</span>
+                      总分：100分
+                    </div>
+                    <div class="score-detail">
+                      <span class="text-primary">&bull;</span>
+                      得分：<%= exam.total_score %>分
+                    </div>
+                    <button type="button" class="btn btn-warning">查看试卷</button>
                   </div>
-                  <div class="score-detail">
-                    <span class="text-primary">&bull;</span>
-                    总分：100分
+                </div>
+              </div>
+            </div>
+
+            <% if index/2 == 0 %>
+              </div>
+            <% end %>
+          <% end %>
+          <!-- <div class="row score-list">
+            <div class="col-sm-6">
+              <div class="panel panel-default">
+                <div class="panel-body">
+                  <div class="col-sm-7 ov-hidden"><%#= image_tag "score-search1.png" %></div>
+                  <div class="col-sm-5">
+                    <h4>前端自动化工具</h4>
+                    <div class="score-detail">
+                      <span class="text-primary">&bull;</span>
+                      时间：2015-08-28
+                    </div>
+                    <div class="score-detail">
+                      <span class="text-primary">&bull;</span>
+                      总分：100分
+                    </div>
+                    <div class="score-detail">
+                      <span class="text-primary">&bull;</span>
+                      得分：80分
+                    </div>
+                    <button type="button" class="btn btn-warning">查看试卷</button>
                   </div>
-                  <div class="score-detail">
-                    <span class="text-primary">&bull;</span>
-                    得分：80分
+                </div>
+              </div>
+            </div>
+
+            <div class="col-sm-6">
+              <div class="panel panel-default">
+                <div class="panel-body">
+                  <div class="col-sm-7 ov-hidden"><%#= image_tag "score-search2.png" %></div>
+                  <div class="col-sm-5">
+                    <h4>前端自动化工具</h4>
+                    <div class="score-detail">
+                      <span class="text-primary">&bull;</span>
+                      时间：2015-08-28
+                    </div>
+                    <div class="score-detail">
+                      <span class="text-primary">&bull;</span>
+                      总分：100分
+                    </div>
+                    <div class="score-detail">
+                      <span class="text-primary">&bull;</span>
+                      得分：80分
+                    </div>
+                    <button type="button" class="btn btn-warning">查看试卷</button>
                   </div>
-                  <button type="button" class="btn btn-warning">查看试卷</button>
                 </div>
               </div>
             </div>
           </div>
-
-          <div class="col-sm-6">
-            <div class="panel panel-default">
-              <div class="panel-body">
-                <div class="col-sm-7 ov-hidden"><%= image_tag "score-search2.png" %></div>
-                <div class="col-sm-5">
-                  <h4>前端自动化工具</h4>
-                  <div class="score-detail">
-                    <span class="text-primary">&bull;</span>
-                    时间：2015-08-28
-                  </div>
-                  <div class="score-detail">
-                    <span class="text-primary">&bull;</span>
-                    总分：100分
-                  </div>
-                  <div class="score-detail">
-                    <span class="text-primary">&bull;</span>
-                    得分：80分
-                  </div>
-                  <button type="button" class="btn btn-warning">查看试卷</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="row score-list">
-          <div class="col-sm-6">
-            <div class="panel panel-default">
-              <div class="panel-body">
-                <div class="col-sm-7 ov-hidden"><%= image_tag "score-search1.png" %></div>
-                <div class="col-sm-5">
-                  <h4>前端自动化工具</h4>
-                  <div class="score-detail">
-                    <span class="text-primary">&bull;</span>
-                    时间：2015-08-28
-                  </div>
-                  <div class="score-detail">
-                    <span class="text-primary">&bull;</span>
-                    总分：100分
-                  </div>
-                  <div class="score-detail">
-                    <span class="text-primary">&bull;</span>
-                    得分：80分
-                  </div>
-                  <button type="button" class="btn btn-warning">查看试卷</button>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-sm-6">
-            <div class="panel panel-default">
-              <div class="panel-body">
-                <div class="col-sm-7 ov-hidden"><%= image_tag "score-search2.png" %></div>
-                <div class="col-sm-5">
-                  <h4>前端自动化工具</h4>
-                  <div class="score-detail">
-                    <span class="text-primary">&bull;</span>
-                    时间：2015-08-28
-                  </div>
-                  <div class="score-detail">
-                    <span class="text-primary">&bull;</span>
-                    总分：100分
-                  </div>
-                  <div class="score-detail">
-                    <span class="text-primary">&bull;</span>
-                    得分：80分
-                  </div>
-                  <button type="button" class="btn btn-warning">查看试卷</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="row score-list">
-          <div class="col-sm-6">
-            <div class="panel panel-default">
-              <div class="panel-body">
-                <div class="col-sm-7 ov-hidden"><%= image_tag "score-search1.png" %></div>
-                <div class="col-sm-5">
-                  <h4>前端自动化工具</h4>
-                  <div class="score-detail">
-                    <span class="text-primary">&bull;</span>
-                    时间：2015-08-28
-                  </div>
-                  <div class="score-detail">
-                    <span class="text-primary">&bull;</span>
-                    总分：100分
-                  </div>
-                  <div class="score-detail">
-                    <span class="text-primary">&bull;</span>
-                    得分：80分
-                  </div>
-                  <button type="button" class="btn btn-warning">查看试卷</button>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-sm-6">
-            <div class="panel panel-default">
-              <div class="panel-body">
-                <div class="col-sm-7 ov-hidden"><%= image_tag "score-search2.png" %></div>
-                <div class="col-sm-5">
-                  <h4>前端自动化工具</h4>
-                  <div class="score-detail">
-                    <span class="text-primary">&bull;</span>
-                    时间：2015-08-28
-                  </div>
-                  <div class="score-detail">
-                    <span class="text-primary">&bull;</span>
-                    总分：100分
-                  </div>
-                  <div class="score-detail">
-                    <span class="text-primary">&bull;</span>
-                    得分：80分
-                  </div>
-                  <button type="button" class="btn btn-warning">查看试卷</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="row score-list">
-          <div class="col-sm-6">
-            <div class="panel panel-default">
-              <div class="panel-body">
-                <div class="col-sm-7 ov-hidden"><%= image_tag "score-search1.png" %></div>
-                <div class="col-sm-5">
-                  <h4>前端自动化工具</h4>
-                  <div class="score-detail">
-                    <span class="text-primary">&bull;</span>
-                    时间：2015-08-28
-                  </div>
-                  <div class="score-detail">
-                    <span class="text-primary">&bull;</span>
-                    总分：100分
-                  </div>
-                  <div class="score-detail">
-                    <span class="text-primary">&bull;</span>
-                    得分：80分
-                  </div>
-                  <button type="button" class="btn btn-warning">查看试卷</button>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-sm-6">
-            <div class="panel panel-default">
-              <div class="panel-body">
-                <div class="col-sm-7 ov-hidden"><%= image_tag "score-search2.png" %></div>
-                <div class="col-sm-5">
-                  <h4>前端自动化工具</h4>
-                  <div class="score-detail">
-                    <span class="text-primary">&bull;</span>
-                    时间：2015-08-28
-                  </div>
-                  <div class="score-detail">
-                    <span class="text-primary">&bull;</span>
-                    总分：100分
-                  </div>
-                  <div class="score-detail">
-                    <span class="text-primary">&bull;</span>
-                    得分：80分
-                  </div>
-                  <button type="button" class="btn btn-warning">查看试卷</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="row score-list">
-          <div class="col-sm-6">
-            <div class="panel panel-default">
-              <div class="panel-body">
-                <div class="col-sm-7 ov-hidden"><%= image_tag "score-search1.png" %></div>
-                <div class="col-sm-5">
-                  <h4>前端自动化工具</h4>
-                  <div class="score-detail">
-                    <span class="text-primary">&bull;</span>
-                    时间：2015-08-28
-                  </div>
-                  <div class="score-detail">
-                    <span class="text-primary">&bull;</span>
-                    总分：100分
-                  </div>
-                  <div class="score-detail">
-                    <span class="text-primary">&bull;</span>
-                    得分：80分
-                  </div>
-                  <button type="button" class="btn btn-warning">查看试卷</button>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-sm-6">
-            <div class="panel panel-default">
-              <div class="panel-body">
-                <div class="col-sm-7 ov-hidden"><%= image_tag "score-search2.png" %></div>
-                <div class="col-sm-5">
-                  <h4>前端自动化工具</h4>
-                  <div class="score-detail">
-                    <span class="text-primary">&bull;</span>
-                    时间：2015-08-28
-                  </div>
-                  <div class="score-detail">
-                    <span class="text-primary">&bull;</span>
-                    总分：100分
-                  </div>
-                  <div class="score-detail">
-                    <span class="text-primary">&bull;</span>
-                    得分：80分
-                  </div>
-                  <button type="button" class="btn btn-warning">查看试卷</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-
+ -->
+        <% end %>
+        
 	    </div>
 
     </div>
