--- a/app/views/teachers/_left_bar.html.erb
+++ b/app/views/teachers/_left_bar.html.erb
@@ -20,17 +20,17 @@
         <%end%>
       </li>
       <li>
-        <%= link_to "", class: 'active' do %>
+        <%= link_to my_faqs_teachers_path, class: 'active' do %>
           <span class="glyphicon glyphicon-book">我的问答</span>
         <%end%>
       </li>
       <li>
-        <%= link_to "", class: 'active' do %>
+        <%= link_to discuss_center_teachers_path, class: 'active' do %>
           <span class="glyphicon glyphicon-list-alt">讨论中心</span>
         <%end%>
       </li>
       <li>
-        <%= link_to "", class: 'active' do %>
+        <%= link_to upload_course_ware_teachers_path, class: 'active' do %>
           <span class="glyphicon glyphicon-upload">上传课件</span>
         <%end%>
       </li>
@@ -40,7 +40,7 @@
         <%end%>
       </li>
       <li>
-        <%= link_to "", class: 'active' do %>
+        <%= link_to my_account_teachers_path, class: 'active' do %>
           <span class="glyphicon glyphicon-cog">我的账户</span>
         <%end%>
       </li>
