--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -3,7 +3,8 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 body.user__index, body.user__show, body.user__update, body.user__my_courses, body.user__my_exams, 
-body.user__score_search, body.user__my_collect, body.user__questions_answers, body.user__discuss_center
+body.user__score_search, body.user__my_collect, body.user__questions_answers, body.user__discuss_center,
+body.user__comment_create
 {
 
   .grey-font {
