--- a/app/views/user/_base_info.html.erb
+++ b/app/views/user/_base_info.html.erb
@@ -2,7 +2,7 @@
 	<div class="row">
 	  <div class="col-md-3">
 		  <div class="pull-left">
-		    <%= image_tag current_user.try(:image).try(:avatar).try(:url, :thumb),class: "img-rounded" %>
+		    <%= image_tag current_user.image.present? ? current_user.try(:image).try(:avatar).try(:url, :thumb) : "missing.png", class: "img-rounded" %>
 		  </div>
 	  </div>
 	  <div class="col-md-9">
